# BlueROV2H-SimTank-ROS-Qualisys

./: .bash_history  .gitignore  README.md
.local/share/gedit/: gedit-metadata.xml
.ros/log/: latest
INSTALLATION/: CONTROL_INSTRUCTIONS.md  INSTALLATION.md  README.md  SIMULATION_INSTRUCTIONS.md  TANK_INSTRUCTIONS.md  TODO_INSTALLATION_TANK.txt
INSTALLATION/unit_testing/: bluerov2_motion_control_unit_test.md
code/guidance_and_control/bluerov2_motion_control/: CMakeLists.txt  package.xml
code/guidance_and_control/bluerov2_motion_control/configs/: bluerov2_motion_control_config.yaml
code/guidance_and_control/bluerov2_motion_control/launch/: bluerov2_motion_control.launch
code/guidance_and_control/bluerov2_motion_control/src/: bluerov2_motion_control_position_node.cpp  bluerov2_motion_control_velocity_node.cpp  qualisys_filter_node.py
code/guidance_and_control/guidance_law/configs/: guidance_params.yaml
code/guidance_and_control/guidance_law/src/: guidance_law_node.py
code/guidance_and_control/mavros_pub/launch/: eee.launch  mavros.launch  pwm_pub.launch
code/guidance_and_control/mavros_pub/scripts/: pub_signal.py  tf2_pose_gt_real.py
code/ros_qualisys_ws/src/ros_qualysis/: CMakeLists.txt  package.xml
code/ros_qualisys_ws/src/ros_qualysis/config/: bauzil-qualisys.yaml
code/ros_qualisys_ws/src/ros_qualysis/launch/: qualisys_bauzil_bringup.launch
code/ros_qualisys_ws/src/ros_qualysis/scripts/: tf2_pose_gt_real.py
code/ros_qualisys_ws/src/ros_qualysis/src/: qualisys-to-ros.cpp
code/simulation/src/bluerov2/bluerov2_control/launch/: rov_pid_controller.launch
code/simulation/src/bluerov2/bluerov2_description/launch/: upload.launch  upload_bluerov2.launch
code/simulation/src/bluerov2/bluerov2_description/robots/: default.xacro
code/simulation/src/bluerov2/bluerov2_description/urdf/: base.xacro  gazebo.xacro  sensors.xacro
code/simulation/src/bluerov2/bluerov2_dobmpc/launch/: start_ampc_demo.launch  start_bridge_demo.launch  start_dobmpc_demo.launch  start_dobmpc_lemniscate_demo.launch  start_dobmpc_tank.launch  start_large_tank_no_control.launch  start_random_demo.launch  start_tank_no_control.launch
code/simulation/src/bluerov2/bluerov2_dobmpc/rosbag/: README.md  analyze_tracking_performance.py  extract_pose_xyz_yaw_calculate.py
code/simulation/src/bluerov2/bluerov2_dobmpc/scripts/: export_and_plot_trajectory.py
code/simulation/src/bluerov2/bluerov2_dobmpc/traj/: tank_dob.py
code/simulation/src/bluerov2/bluerov2_gazebo/launch/: bridge_demo.launch  quick_start.launch  start_accel_controller_demo.launch  start_mpc_demo.launch  start_pid_demo.launch  start_pid_demo_with_teleop.launch  start_pid_with_current.launch  start_test_Tank.launch  start_trajectory_controller_demo.launch  start_with_thruster_manager.launch  test_tank.launch
code/simulation/src/bluerov2/bluerov2_gazebo/worlds/: Large_tank.world  UCL_tank.world  test_Tank.world
code/simulation/src/simulation_to_real_bridge/: CMakeLists.txt  package.xml
code/simulation/src/simulation_to_real_bridge/config/: bluerov2_allocation.yaml
code/simulation/src/simulation_to_real_bridge/launch/: simulation_to_real_bridge.launch
code/simulation/src/simulation_to_real_bridge/src/: align_ned_odom.py  pose_gt_to_ned.py  sim_to_real_bridge.py  thruster_allocator.py
code/tank-setup/bluerov2_pid/: README.md
code/tank-setup/bluerov2_pid/ros_qualysis/: README.md
code/tank-setup/src/bluerov2_motion_control/: package.xml
code/tank-setup/src/bluerov2_motion_control/configs/: bluerov2_motion_control_config.yaml
code/tank-setup/src/bluerov2_motion_control/launch/: bluerov2_motion_control.launch
code/tank-setup/src/bluerov2_motion_control/src/: bluerov2_motion_control_position_node.cpp  bluerov2_motion_control_velocity_node.cpp
code/tank-setup/src/bluerov2_position_control/configs/: bluerov2_position_control_config.yaml
code/tank-setup/src/bluerov2_position_control/launch/: bluerov2_position_control.launch
code/tank-setup/src/guidance_law/: CMakeLists.txt
code/tank-setup/src/guidance_law/configs/: guidance_params.yaml
code/tank-setup/src/guidance_law/launch/: guidance_law.launch
code/tank-setup/src/guidance_law/src/: guidance_law_node.py
(+25 files in other folders)
