<?xml version="1.0"?>
<package format="2">
  <name>simulation_to_real_bridge</name>
  <version>0.0.0</version>
  <description>A package reading the states from Gazebo and passing them as if there were taken from real sensors, and passing the desired force commands requested to the thrusters.</description>

  <maintainer email="grande.rdev@gmail.com">Davide Grande</maintainer>
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
